==> woutkolkman/legionella_predictor/stm32f0/projects/stm32f0/src/EBYTE.c <==
#include <EBYTE.h>

void send_byte( uint8_t the_byte) {
	USART_putc(the_byte);
	complete_task(1000);
}

void send_struct(const void* the_structure, uint16_t size) { // sends a struct through LoRa
  uint16_t count = 0;
	uint8_t *C_The_Structure = (uint8_t *) the_structure;
	Tx_buffer = C_The_Structure;
	USART_enable();
	while (count < size) {
	  USART_putc(Tx_buffer[count]);
		count++;
	}
	complete_task(1000);
	USART_disable();
}

void get_struct(const void* the_structure, uint16_t size) {
	
	//the struct will be stored in the Rx_buffer, not implemented
	complete_task(1000);
}

void complete_task(unsigned long time_out) {
	if(_AUX != -1) {
		time_passed = 0;
		TIM_Cmd(TIM1, ENABLE);
		while(GPIO_ReadInputDataBit(GPIOA, LORA_AUX_PIN) == Bit_RESET) {
			if (time_passed > time_out) {
				break;
			}
		}
	} else {
		timer_delay(NO_AUX_DELAY);
	}
	timer_delay(MINIMUM_AFTER_AUX_DELAY);
	TIM_Cmd(TIM1, DISABLE);
}

void set_mode(uint8_t mode) { //setting the lora module mode
	timer_delay(PIN_RECOVER);
	switch(mode) {
		case MODE_NORMAL:
			GPIO_ResetBits(GPIOA, LORA_M0_PIN | LORA_M1_PIN);
			break;
		case MODE_WAKEUP:
			GPIO_SetBits(GPIOA, LORA_M0_PIN);
			GPIO_ResetBits(GPIOA, LORA_M1_PIN);
			break;
		case MODE_POWERDOWN:
			GPIO_ResetBits(GPIOA, LORA_M0_PIN);
			GPIO_SetBits(GPIOA, LORA_M1_PIN);
			break;
		case MODE_PROGRAM:
			GPIO_SetBits(GPIOA, LORA_M0_PIN | LORA_M1_PIN);
			break;
		default:
			break;
	}
	timer_delay(PIN_RECOVER);
	clear_buffer();
	complete_task(4000);	
}

void Reset() {
	set_mode(MODE_PROGRAM);
	timer_delay(50);
	USART_putc(0xC4);
	USART_putc(0xC4);
	USART_putc(0xC4);
	complete_task(4000);
	set_mode(MODE_NORMAL);
}

void set_address_h(uint8_t val) {
	_Address_High = val;
}

uint8_t get_address_h() {
	return _Address_High;
}

void set_address_l(uint8_t val) {
	_Address_low = val;
}

uint8_t get_address_l() {
	return _Address_low;
}

void set_air_data_rate(uint8_t val) {
	_Air_data_rate = val;
	build_speed_byte();
}

uint8_t get_air_data_rate() {
	return _Air_data_rate;
}

void set_parity_bit(uint8_t val) {
	_Parity_bit = val;
	build_speed_byte();
}

uint8_t get_parity_bit( ) {
	return _Parity_bit;
}

void set_transmission_mode(uint8_t val) {
	_Option_transmission = val;
	build_option_byte();
}

uint8_t get_transmission_mode( ) {
	return _Option_transmission;
}

void set_pullup_mode(uint8_t val) {
	_Option_pullup = val;
	build_option_byte();
}

uint8_t get_pullup_mode( ) {
	return _Option_pullup;
}

void set_wor_timing(uint8_t val) {
	_Option_wakeup = val;
	build_option_byte();
}

uint8_t get_WOR_timing() {
	return _Option_wakeup;
}

void set_FEC_mode(uint8_t val) {
	_Option_FEC = val;
	build_option_byte();
}

uint8_t get_FEC_mode( ) {
	return _Option_FEC;
}

void set_transmit_power(uint8_t val) {

	_Option_power = val;
	build_option_byte();

}

uint8_t get_transmit_power() {
	return _Option_power;
}

void set_address(uint16_t Val) {
	_Address_High = ((Val & 0xFFFF) >> 8);
	_Address_low = (Val & 0xFF);
}

uint16_t get_address() {
	return (_Address_High << 8) | (_Address_low );
}

void set_UART_baud_rate(uint8_t val) {
	_UART_data_rate = val;
	build_speed_byte();
}

uint8_t get_uart_baud_rate() {
	return _UART_data_rate;
}

void build_speed_byte() {
	_Speed = 0;
	_Speed = ((_Parity_bit & 0xFF) << 6) | ((_UART_data_rate & 0xFF) << 3) | (_Air_data_rate & 0xFF);
}

void build_option_byte() {
	_Options = ((_Option_transmission & 0xFF) << 7) | ((_Option_pullup & 0xFF) << 6) | ((_Option_wakeup & 0xFF) << 3) | ((_Option_FEC & 0xFF) << 2) | (_Option_power & 0x03);
}

bool get_aux() {
	return GPIO_ReadInputDataBit(GPIOA, LORA_AUX_PIN);
}

void save_parameters(uint8_t val) {
	
	set_mode(MODE_PROGRAM);
	timer_delay(PIN_RECOVER);

	USART_putc(val);
	USART_putc(_Address_High);
	USART_putc(_Address_low);
	USART_putc(_Speed);
	USART_putc(_Channel);
	USART_putc(_Options);

	timer_delay(50);

	complete_task(4000);
	
	set_mode(MODE_NORMAL);	
}

void print_parameters() {

	_Parity_bit = (_Speed & 0XC0) >> 6;
	_UART_data_rate = (_Speed & 0X38) >> 3;
	_Air_data_rate = _Speed & 0X07;

	_Option_transmission = (_Options & 0X80) >> 7;
	_Option_pullup = (_Options & 0X40) >> 6;
	_Option_wakeup = (_Options & 0X38) >> 3;
	_Option_FEC = (_Options & 0X07) >> 2;
	_Option_power = (_Options & 0X03);

	Serial_println("----------------------------------------");
	Serial_print("Model no.: ");  Serial_putintln(_Model);
	Serial_print("Version  : ");  Serial_putintln(_Version);
	Serial_print("Features : ");  Serial_putintln(_Features);
	Serial_println(" ");
	Serial_print("Mode : ");  Serial_putintln(_Save);
	Serial_print("AddH : ");  Serial_putintln(_Address_High);
	Serial_print("AddL : ");  Serial_putintln(_Address_low);
	Serial_print("Sped : ");  Serial_putintln(_Speed);
	Serial_print("Chan : ");  Serial_putintln(_Channel);
	Serial_print("Optn : ");  Serial_putintln(_Options);
	Serial_print("Addr : ");  Serial_putintln(get_address());
	Serial_println(" ");
	Serial_print("SpeedParityBit    : ");  Serial_putintln(_Parity_bit);
	Serial_print("SpeedUARTDataRate : ");  Serial_putintln(_UART_data_rate);
	Serial_print("SpeedAirDataRate  : ");  Serial_putintln(_Air_data_rate);
	Serial_print("OptionTrans       : ");  Serial_putintln(_Option_transmission);
	Serial_print("OptionPullup      : ");  Serial_putintln(_Option_pullup);
	Serial_print("OptionWakeup      : ");  Serial_putintln(_Option_wakeup);
	Serial_print("OptionFEC         : ");  Serial_putintln(_Option_FEC);
	Serial_print("OptionPower       : ");  Serial_putintln(_Option_power);

	Serial_println("----------------------------------------");

}

bool read_parameters() {

	_Params[0] = 0;
	_Params[1] = 0;
	_Params[2] = 0;
	_Params[3] = 0;
	_Params[4] = 0;
	_Params[5] = 0;

	set_mode(MODE_PROGRAM);

	USART_putc(0xC1);

	USART_putc(0xC1);

	USART_putc(0xC1);

	read_bytes((uint8_t*)&_Params, (uint8_t) sizeof(_Params));

	_Save = _Params[0];
	_Address_High = _Params[1];
	_Address_low = _Params[2];
	_Speed = _Params[3];
	_Channel = _Params[4];
	_Options = _Params[5];

	_Address =  (_Address_High << 8) | (_Address_low);
	_Parity_bit = (_Speed & 0XC0) >> 6;
	_UART_data_rate = (_Speed & 0X38) >> 3;
	_Air_data_rate = _Speed & 0X07;

	_Option_transmission = (_Options & 0X80) >> 7;
	_Option_pullup = (_Options & 0X40) >> 6;
	_Option_wakeup = (_Options & 0X38) >> 3;
	_Option_FEC = (_Options & 0X07) >> 2;
	_Option_power = (_Options & 0X03);
	
	set_mode(MODE_NORMAL);

	if (0xC0 != _Params[0]){
		
		return false;
	}

	return true;
	
}

bool read_model_data() {
	bool found;
	_Params[0] = 0;
	_Params[1] = 0;
	_Params[2] = 0;
	_Params[3] = 0;
	_Params[4] = 0;
	_Params[5] = 0;

	found = false;
	set_mode(MODE_PROGRAM);
	
	USART_putc(0xC3);
	
	USART_putc(0xC3);
	
	USART_putc(0xC3);

	
	read_bytes((uint8_t*)& _Params, (uint8_t) sizeof(_Params));
	
	
	_Save = _Params[0];	
	_Model = _Params[1];
	_Version = _Params[2];
	_Features = _Params[3];	

	if (0xC3 != _Params[0]) {
		uint8_t timeout;
		for (timeout = 0; timeout < 5; timeout++){
			#ifdef DEBUG
			Serial_print("Trying: ");Serial_putintln(timeout);
			#endif
			_Params[0] = 0;
			_Params[1] = 0;
			_Params[2] = 0;
			_Params[3] = 0;
			_Params[4] = 0;
			_Params[5] = 0;
			timer_delay(100);
			USART_putc(0xC3);
			USART_putc(0xC3);
			USART_putc(0xC3);
			read_bytes((uint8_t*)& _Params, (uint8_t) sizeof(_Params));			
			_Save = _Params[0];	
			_Model = _Params[1];
			_Version = _Params[2];
			_Features = _Params[3];	
			if (0xC3 == _Params[0]){
				found = true;
				break;
			}		
		}
	}
	else {
		found = true;
	}
	set_mode(MODE_NORMAL);
	complete_task(1000);
	return found;
	
}
